started with parameters in routes, fixed css stylesheet on each template and starting with sessions

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -32,20 +32,10 @@
   <h2>Bekijk de status van jouw matches</h2>
 
 <section class="insert">
-<form action="/insert" method="post">
-<div class="input">
-  <label for="title">Title</label>
-  <input type="text" id="title" name="title">
-</div>
-<div class="input">
-  <label for="content">Content</label>
-  <input type="text" id="content" name="content">
-</div>
-<div class="input">
-  <label for="author">Author</label>
-  <input type="author" id="author" name="author">
-</div>
-<button type="sumbit">Insert</button>
+<form action="/test/submit" method="post">
+
+  <input type="text" id="title" name="id">
+<button type="submit">Insert</button>
 </form>
 
 </section>
