--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Buckettest {{title}}</title>
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
@@ -14,15 +14,15 @@
         <nav>
             <ul class="ulnav">
                 <li ><img class="hamburgericon" src="/images/menu.png"></a></li>
-                <li class="profilenav"><a href="/"><img src="images/profile.png"></a></li>
-                <li><a ><img src="images/chats.png"></a></li>
+                <li class="profilenav"><a href="/"><img src="/images/profile.png"></a></li>
+                <li><a ><img src="/images/chats.png"></a></li>
 
             </ul>
             <div class="hamburgernav">
                 <button class="close">X</button>
             <div class="hamburgerdiv">
                 <ul class="hamburgerul">
-                    <li><img class="iconbucket" src="images/iconbuckettest.png"></li>
+                    <li><img class="iconbucket" src="/images/iconbuckettest.png"></li>
                     <li><a href="/">Home</a></li>
                     <li><a>Jouw Matches</a></li>
                     <li><a href="buckettest">Buckettest</a></li>
