got working that profile and status from matches are deliverd from the database

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
         </div>
     </div>
    <div class="profielcontainer1"></div>
-  {{#each oudProfile.you}}
+  {{!-- {{#each oudProfile.you}}
         <div id="jouwprofiel">
                 <h5><strong>{{naam}}</strong> - Lid sinds {{lidSinds}}</h5>
                 <div class="profielcontainer">
@@ -22,9 +22,9 @@
                 </div>
               </div>
             </div>
-            {{/each}}
+            {{/each}} --}}
     
- {{#each profile}}
+ {{#each profiles}}
         <div id="jouwprofiel">
                 <h5><strong>{{profileName}}</strong> - Lid sinds {{memberSince}}</h5>
                 <div class="profielcontainer">
