added a new form to the buckettest

--- a/views/buckettest.hbs
+++ b/views/buckettest.hbs
@@ -26,18 +26,34 @@
                 <div class="formcontainer">
                     <div class="forminput">
                         <div class="input2images">
-                        <img src="images/beachsun.png">
+                        <img src="images/borrelen.jpg">
 
-                        <img src="images/jungle.png">
+                        <img src="images/parachute.jpg">
                         </div>
                         <div class="slidecontainer">
                             <input type="range" name="preferences"min="0" max="10" value="5" class="slider" id="myRange">
-                            <input type="text" name="outcomeInput" hidden>
+                            
                         </div>
                     </div>
                 </div>
             </div>
+  <div class="omgeving">
 
+                <h4>Eerste date</h4>
+                <div class="formcontainer">
+                    <div class="forminput">
+                      <div class="input2images"> 
+                        <input type="radio" name="date" value="3" id="uiteten1">
+                        <label for="uiteten1"><img src="images/uiteten.jpg"></label>
+                        <input type="radio" name="date" value="6" id="karaoke2">
+                        <label class="labelwinter" for="karaoke2"><img class="winterimg2" src="images/karaoke.jpg"></label>
+                        <input type="radio" name="date" value="9" id="surfen3">
+                        <label for="surfen3"><img src="images/surfen.jpg"></label>
+                        <input type="text" name="outcomeInput" hidden>
+                    </div>
+                    </div>
+                </div>
+            </div>
             <br>
   <div class="divsubmit">         
             <input id="submitbutton" type="submit" value="Verstuur">
