added that login page looks for email and password on database

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 {{!-- satus validation --}}
   
   <h1>Login</h1>
-    <form action="/submit" method="post">
+    <form method="post">
         <div class="input">
             <label for="email">E-Mail</label>
             <input type="text" id="email" name="email">
@@ -11,7 +11,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password">
  
-        <button type="submit">Login</button>
+        <button type="submitlogin">Login</button>
     </form>
 
  {{!-- end status validatoin --}}
