deleted post on login page

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,7 +11,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password">
  
-        <button type="submitlogin">Login</button>
+        <button type="submit">Login</button>
     </form>
 
  {{!-- end status validatoin --}}
