cleaned some routes

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -3,6 +3,7 @@
   {{# if success }}
     <section class="success">
         <h2>Successful Validation!</h2>
+        <a href="/login">Ga hier naar het Log-in</a>
     </section>
 {{ else }}
     {{# if errors }}
