--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -23,7 +23,7 @@
             <div class="hamburgerdiv">
                 <ul class="hamburgerul">
                     <li><img class="iconbucket" src="/images/iconbuckettest.png"></li>
-                    <li><a href="/">Home</a></li>
+                    <li><a method="get" href="/">Home</a></li>
                     <li><a>Jouw Matches</a></li>
                     <li><a href="buckettest">Buckettest</a></li>
                     <li><a>Bucketlist</a></li>
