--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,49 +10,51 @@ nav li a {
     width: 60px;
 }
 
-.hamburgernav{
-    display:none;
-    position:absolute;
+.hamburgernav {
+    display: none;
+    position: absolute;
     background-color: #9ABE22;
-    height:100%;
-    width:100%;
-    margin-top:0px;
+    height: 100%;
+    width: 100%;
+    margin-top: 0px;
 }
 
 
 
 
-button.close{
-    font-size:2em;
-    color:white;
-    background-color:orange;
+button.close {
+    font-size: 2em;
+    color: white;
+    background-color: orange;
     border-radius: 50%;
-    margin-top:5px;
+    margin-top: 5px;
     padding: 10px;
-    float:right;
-    margin-right:10px
+    float: right;
+    margin-right: 10px
 }
 
 .hamburgerdiv {
     display: flex;
 }
-.hamburgerul{
-  display:block;
-  list-style: none; 
-  margin-left: auto;
-  margin-right: auto;
+
+.hamburgerul {
+    display: block;
+    list-style: none;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.hamburgerul li  a{
-    font-size:2em;
-    color:white;
-    margin-top:20px;
-   
+.hamburgerul li a {
+    font-size: 2em;
+    color: white;
+    margin-top: 20px;
+
 }
 
- .hamburgerul .iconbucket{
-     width:100px;
- }
+.hamburgerul .iconbucket {
+    width: 100px;
+}
+
 header {
     /*    position: fixed;*/
     display: block;
@@ -69,8 +71,9 @@ header a {
     margin: 5px;
     font-weight: 700;
 }
-nav img{
-    width:40px;
+
+nav img {
+    width: 40px;
 }
 
 header li a {
@@ -98,30 +101,34 @@ ul.ulnav {
 
 .title {
     margin-left: 10px;
-    margin-top:-50px;
+    margin-top: -50px;
 }
 
 #titlematches {
     margin-left: 10px;
-   display :flex
+    display: flex
 }
 
 .title h1 {
     color: #9ABE22;
-    
-   
-}
-.title button{
-padding: 10px 10px;
-border-radius: 20px;
-margin: auto auto auto 30vw;
-background-color: #43a4cf;
-color: white;
-font-size:20px;
+
 
 }
-.title div {display:flex;
-   }
+
+.title button {
+    padding: 10px 10px;
+    border-radius: 20px;
+    margin: auto auto auto 30vw;
+    background-color: #43a4cf;
+    color: white;
+    font-size: 20px;
+
+}
+
+.title div {
+    display: flex;
+}
+
 .omgeving {
     background-color: #43A4CF;
     margin: 10px;
@@ -132,7 +139,7 @@ font-size:20px;
     margin: 10px;
 }
 
- .buckettest .omgeving input:not(#submitbutton) {
+.buckettest .omgeving input:not(#submitbutton) {
     display: none;
 }
 
@@ -144,7 +151,7 @@ main h4 {
 
 .formcontainer {
     display: flex;
-   
+
 }
 
 .forminput {
@@ -161,65 +168,90 @@ form img {
 }
 
 .slidecontainer {
-  width: 90%; /* Width of the outside container */
-    margin-left:auto;
-    margin-right:auto;
+    width: 90%;
+    /* Width of the outside container */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* The slider itself */
 .slider {
-  -webkit-appearance: none;  /* Override default CSS styles */
-  appearance: none;
-  width: 100%; /* Full-width */
-  height: 25px; /* Specified height */
-  background: #d3d3d3; /* Grey background */
-  outline: none; /* Remove outline */
-  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-  transition: opacity .2s;
+    -webkit-appearance: none;
+    /* Override default CSS styles */
+    appearance: none;
+    width: 100%;
+    /* Full-width */
+    height: 25px;
+    /* Specified height */
+    background: #d3d3d3;
+    /* Grey background */
+    outline: none;
+    /* Remove outline */
+    opacity: 0.7;
+    /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s;
+    /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
 }
 
 /* Mouse-over effects */
 .slider:hover {
-  opacity: 1; /* Fully shown on mouse-over */
+    opacity: 1;
+    /* Fully shown on mouse-over */
 }
 
-/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
 .slider::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Override default look */
-  appearance: none;
-  width: 25px; /* Set a specific slider handle width */
-  height: 25px; /* Slider handle height */
-  background: #4CAF50; /* Green background */
-  cursor: pointer; /* Cursor on hover */
+    -webkit-appearance: none;
+    /* Override default look */
+    appearance: none;
+    width: 25px;
+    /* Set a specific slider handle width */
+    height: 25px;
+    /* Slider handle height */
+    background: #4CAF50;
+    /* Green background */
+    cursor: pointer;
+    /* Cursor on hover */
 }
 
 .slider::-moz-range-thumb {
-  width: 25px; /* Set a specific slider handle width */
-  height: 25px; /* Slider handle height */
-  background: #4CAF50; /* Green background */
-  cursor: pointer; /* Cursor on hover */
+    width: 25px;
+    /* Set a specific slider handle width */
+    height: 25px;
+    /* Slider handle height */
+    background: #4CAF50;
+    /* Green background */
+    cursor: pointer;
+    /* Cursor on hover */
 }
 
-.labelwinter2 {margin-left:auto;
-margin-right:auto;}
+.labelwinter2 {
+    margin-left: auto;
+    margin-right: auto;
+}
 
-.liever .input2images {display:flex;
-    justify-content: space-between;}
-.liever .input2images img {height:27%;}
+.liever .input2images {
+    display: flex;
+    justify-content: space-between;
+}
 
-input:checked + label img {
+.liever .input2images img {
+    height: 27%;
+}
+
+input:checked+label img {
     border: 5px solid #9ABE22;
 }
 
 #submitbutton {
     padding: 10px 80px;
-margin-left: auto;
-margin-right:auto;
-background-color: #9ABE20;
-font-size:20px;
-color: white;
-margin-bottom:20px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #9ABE20;
+    font-size: 20px;
+    color: white;
+    margin-bottom: 20px;
 
 }
 
@@ -227,20 +259,20 @@ margin-bottom:20px;
     display: flex;
 }
 
-#jouwprofiel{
-background-color:#F9AE1F;
-margin:10px;
-color:white;
-font-size:20px;
+#jouwprofiel {
+    background-color: #F9AE1F;
+    margin: 10px;
+    color: white;
+    font-size: 20px;
 }
 
 #jouwprofiel img {
     border-radius: 50%;
-    width:100px;
+    width: 100px;
 }
 
 h5 {
-    margin-top:-10px;
+    margin-top: -10px;
 }
 
 .profielcontainer {
@@ -248,54 +280,55 @@ h5 {
 }
 
 .profielinfo {
-    margin-left:10px;
-   
-    
+    margin-left: 10px;
+
+
 }
 
 .profielinfo p {
-    margin-top:-2px;
+    margin-top: -2px;
 }
 
-.bekijkbucketlist{
+.bekijkbucketlist {
     background-color: grey;
     margin: 2px 5px;
 }
 
-.timeline{
+.timeline {
     margin: 5px 10px;
 }
 
 h2.timelinetitle {
     color: #9ABE22;
-    font-size:2em;
-    margin-bottom:-15px;
-   
+    font-size: 2em;
+    margin-bottom: -15px;
+
 }
 
-.title h1{
+.title h1 {
     color: #9ABE22;
-    font-size:2em;
-    margin-bottom:0px;
-   
-}
-#jouwprofiel{
-    margin-top:25px;
-}
-.matchprofiel{
-background-color:#43a4cf;
-margin:0px;
-color:white;
-font-size:20px;
-margin-top:30px;
+    font-size: 2em;
+    margin-bottom: 0px;
+
 }
 
-.matchprofiel img{
+#jouwprofiel {
+    margin-top: 25px;
+}
+
+.matchprofiel {
+    background-color: #43a4cf;
+    margin: 0px;
+    color: white;
+    font-size: 20px;
+    margin-top: 30px;
+}
+
+.matchprofiel img {
     border-radius: 50%;
-    width:100px;
+    width: 100px;
 }
 
-.timeline .matchprofiel:nth-child(even){
-    background-color:#6DC4CD;
+.timeline .matchprofiel:nth-child(even) {
+    background-color: #6DC4CD;
 }
-
