added a progressive enhancement menu

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,7 +20,10 @@ nav li a {
 }
 
 
-
+.hamburgernavwithoutjava{
+    display: block;
+    margin-top:-20px;
+}
 
 button.close {
     font-size: 2em;
