--- a/views/buckettest.hbs
+++ b/views/buckettest.hbs
@@ -3,7 +3,7 @@
             <h1>The Bucktest</h1>
             <h2>Wat heeft jouw voorkeur?</h2>
         </div>
-        <form class="buckettest" action="/" method="post">
+        <form class="buckettest" method="post">
             <div class="omgeving">
 
                 <h4>Omgeving</h4>
