--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
       </div>
       <div class="profielinfo">
         <p>Jij bent een <strong>{{user.type}}</strong></p>
-        <p>Jij zoekt een {{user.searchType}}</p>
+        <p>Jij zoekt een {{user.type}}</p>
         <a> Instellingen</a>
         <a class="bekijkbucketlist">Bekijk bucketlist</a>
       </div>
