update before starting img upload with multer, evrything working

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,8 +14,8 @@
         <img src="images/profile/{{user.profilePicUrl}}">
       </div>
       <div class="profielinfo">
-        <p>Jij bent een <strong>{{user.type}}</strong></p>
-        <p>Jij zoekt een {{user.type}}</p>
+        <p><strong>{{user.iWant}}</strong></p>
+        <p>Jij zoekt een <strong>{{user.type}}</strong></p>
         <a> Instellingen</a>
         <a class="bekijkbucketlist">Bekijk bucketlist</a>
       </div>
