filtered own id out of the matches list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -147,6 +147,9 @@ ul.ulnav {
 .buckettest .omgeving input:not(#submitbutton) {
     display: none;
 }
+#profilepic:hover{
+    cursor: pointer;
+}
 
 main h4 {
     color: white;
