--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,17 +2,21 @@
 
 <h1>Login</h1>
 
-<form method="post">
+<form class="login" method="post">
+    <img class="iconbucket" src="/images/iconbuckettest.png">
     <div class="input">
         <label for="email">E-Mail</label>
-        <input type="text" id="email" name="email">
+        <input class="formcenter"  type="text" id="email" name="email">
     </div>
 
     <div class="input">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password">
+        <input  class="formcenter" type="password" id="password" name="password">
 
         <button type="submit">Login</button>
+        </div>
 </form>
 <br>
-<a href="/register">New? Register here</a>
+<div class="newregisterdiv">
+<a class="newregister" href="/register"><button>New? Register here</button></a>
+</div>
