--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,5 +1,5 @@
 {{!-- satus validation --}}
-  
+  <h1>Registeren</h1>
   {{# if success }}
     <section class="success">
         <h2>Registreren gelukt!</h2>
@@ -16,6 +16,7 @@
         </section>
     {{/if}}
     <form class="registreren" action="/submit" method="post">
+    <img class="iconbucket" src="/images/iconbuckettest.png">
         <div class="input">
             <label for="email">E-Mail</label><br>
             <input class="formcenter" type="text" id="email" name="email">
