Cleaned up the database and added special thanks to readme

--- a/views/buckettest.hbs
+++ b/views/buckettest.hbs
@@ -31,7 +31,8 @@
                         <img src="images/parachute.jpg">
                         </div>
                         <div class="slidecontainer">
-                            <input type="range" name="preferences"min="0" max="10" value="5" class="slider" id="myRange">
+                            {{!-- https://www.w3schools.com/howto/howto_js_rangeslider.asp - slider bron--}}
+                            <input type="range" name="preferences"min="0" max="10" value="5" class="slider" id="myRange"> 
                             
                         </div>
                     </div>
